# test_kitchen

./: .env.sample  .gitignore  Makefile  README.md  TEST_REPORT.md  TZ.md  mypy.ini  qa_check.py  qa_check_v2.py  ruff.toml  test_edge_cases.py  test_flow.py  test_format.py
services/backend/: .env.example  Dockerfile  README.md  alembic.ini  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
services/backend/migrations/: env.py
services/backend/migrations/versions/: 0001_initial.py  f6e83b2189f1_create_tags.py
services/backend/src/mini_crm/app/: main.py
services/backend/src/mini_crm/config/: logging.py  settings.py
services/backend/src/mini_crm/core/: cache.py  db.py  dependencies.py  security.py
services/backend/src/mini_crm/modules/: __init__.py
services/backend/src/mini_crm/modules/activities/: models.py
services/backend/src/mini_crm/modules/auth/: models.py
services/backend/src/mini_crm/modules/common/: context.py  policies.py
services/backend/src/mini_crm/modules/contacts/: models.py
services/backend/src/mini_crm/modules/deals/: models.py
services/backend/src/mini_crm/modules/organizations/: models.py
services/backend/src/mini_crm/modules/tags/: models.py
services/backend/src/mini_crm/modules/tasks/: models.py
services/backend/src/mini_crm/shared/: enums.py
services/backend/src/mini_crm/shared/domain/: __init__.py  base.py  events.py  exceptions.py  (+1 more)
services/backend/tests/: conftest.py  test_activities.py  test_analytics.py  test_auth.py  test_contacts.py  test_deals.py  test_health.py  test_organizations.py  test_tasks.py
(+89 files in other folders)
